BuildHughes/translation-tool/inputs/source_meta/objects/Tab_Link_Visibility__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Country__c</fullName>
        <label>Applicable Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Busniess_Model__c</fullName>
        <label>Busniess Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>ConsumerVAR</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Controlling_Custom_Permission__c</fullName>
        <description>For each tab mentioned in the &quot;Tab_Link_Not_Visibile__c&quot;, a custom permission can be mentioned to enable the tab. Every tab for which custom permission record is being created should be hidden by default.</description>
        <label>Controlling Custom Permission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YAHS_ViewAccountTransactions</fullName>
                </value>
                <value>
                    <fullName>YAHS_PRT_CanManageFAPTokens</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_Tab_Name__c</fullName>
        <description>This field contains the list of all the tabs and links which are to shown or hidden from the users</description>
        <label>Link/Tab Visible</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activity Types</fullName>
                </value>
                <value>
                    <fullName>Case Template</fullName>
                </value>
                <value>
                    <fullName>Chronic Rule</fullName>
                </value>
                <value>
                    <fullName>Customer Matrix Rule</fullName>
                </value>
                <value>
                    <fullName>Customer Notes</fullName>
                </value>
                <value>
                    <fullName>Case Creation Rule</fullName>
                </value>
                <value>
                    <fullName>OperationalSLACalculation</fullName>
                </value>
                <value>
                    <fullName>Quick Note Template</fullName>
                </value>
                <value>
                    <fullName>Resolution Code Rule</fullName>
                </value>
                <value>
                    <fullName>Service Provider Rule</fullName>
                </value>
                <value>
                    <fullName>Asset Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Pending Activity</fullName>
                </value>
                <value>
                    <fullName>Chronic Status</fullName>
                </value>
                <value>
                    <fullName>Asset Provisioning History</fullName>
                </value>
                <value>
                    <fullName>Site Attachments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>This field indicates the profile for the link / Tab should be visible or not</description>
        <label>Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hughes - Brazil - B2C - CSM</fullName>
                </value>
                <value>
                    <fullName>Hughes - Brazil - B2C - CSR</fullName>
                </value>
                <value>
                    <fullName>INT Admin</fullName>
                </value>
                <value>
                    <fullName>INT Admin Plus</fullName>
                </value>
                <value>
                    <fullName>Hughes - CSM</fullName>
                </value>
                <value>
                    <fullName>Hughes - CSM Enterprise</fullName>
                </value>
                <value>
                    <fullName>Hughes - CSM Consumer</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Service Provider - CSR</fullName>
                </value>
                <value>
                    <fullName>Service Provider Admin ( Customer Community Plus Login)</fullName>
                </value>
                <value>
                    <fullName>Yahsat Admin</fullName>
                </value>
                <value>
                    <fullName>Service Provider - Read only</fullName>
                </value>
                <value>
                    <fullName>SP Distributor - Admin</fullName>
                </value>
                <value>
                    <fullName>SP Distributor - CSR</fullName>
                </value>
                <value>
                    <fullName>SP Distributor - Read only</fullName>
                </value>
                <value>
                    <fullName>SPCustomer</fullName>
                </value>
                <value>
                    <fullName>SPEnterprise</fullName>
                </value>
                <value>
                    <fullName>Yahsat - Read Only</fullName>
                </value>
                <value>
                    <fullName>Tier 3 CSR</fullName>
                </value>
                <value>
                    <fullName>Yahsat CSR</fullName>
                </value>
                <value>
                    <fullName>INT CSR</fullName>
                </value>
                <value>
                    <fullName>INT CSM</fullName>
                </value>
                <value>
                    <fullName>VAR Partner Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <description>Record Type Developer Name</description>
        <label>RecordTypeName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer_Customer</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                </value>
                <value>
                    <fullName>Yahsat_Business_Support_Case</fullName>
                </value>
                <value>
                    <fullName>Yahsat_Consumer_Customer_Case</fullName>
                </value>
                <value>
                    <fullName>Yahsat_Enterprise_Customer_Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <label>SObjectType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tab_Link_Not_Visibile__c</fullName>
        <label>Tab/Link Not Visible</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Transaction</fullName>
                </value>
                <value>
                    <fullName>Allocate Token</fullName>
                </value>
                <value>
                    <fullName>Asset Chronic History</fullName>
                </value>
                <value>
                    <fullName>Asset Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Asset Provisioning History</fullName>
                </value>
                <value>
                    <fullName>Attributes</fullName>
                </value>
                <value>
                    <fullName>Attributes Audit</fullName>
                </value>
                <value>
                    <fullName>AttributesColumn</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Billing Portal</fullName>
                </value>
                <value>
                    <fullName>Business Status</fullName>
                </value>
                <value>
                    <fullName>Chronic Status</fullName>
                </value>
                <value>
                    <fullName>Cross Poll</fullName>
                </value>
                <value>
                    <fullName>Current Usage</fullName>
                </value>
                <value>
                    <fullName>Customer Notes</fullName>
                </value>
                <value>
                    <fullName>De-allocate Token</fullName>
                </value>
                <value>
                    <fullName>FAP Management</fullName>
                </value>
                <value>
                    <fullName>FAP Status</fullName>
                </value>
                <value>
                    <fullName>Features and Service Offerings</fullName>
                </value>
                <value>
                    <fullName>Historical Usage</fullName>
                </value>
                <value>
                    <fullName>HNS Product Name</fullName>
                </value>
                <value>
                    <fullName>HSvc_ActivityType__c</fullName>
                </value>
                <value>
                    <fullName>HSvc_CaseCreationRules__c</fullName>
                </value>
                <value>
                    <fullName>HSvc_CaseTemplate__c</fullName>
                </value>
                <value>
                    <fullName>HSvc_ChronicRule__c</fullName>
                </value>
                <value>
                    <fullName>HSvc_CustomerMatrix__c</fullName>
                </value>
                <value>
                    <fullName>HSvc_OperationalSLACalculation__c</fullName>
                </value>
                <value>
                    <fullName>HSvc_QuickNotesTemplates__c</fullName>
                </value>
                <value>
                    <fullName>HSvc_ResolutionCodeRule__c</fullName>
                </value>
                <value>
                    <fullName>HSvc_ServiceProviderRule__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Tab/Link Visibility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Profile__c</columns>
        <columns>Tab_Link_Not_Visibile__c</columns>
        <columns>SObjectType__c</columns>
        <columns>Applicable_Country__c</columns>
        <columns>RecordTypeName__c</columns>
        <columns>Busniess_Model__c</columns>
        <columns>Controlling_Custom_Permission__c</columns>
        <columns>Link_Tab_Name__c</columns>
        <columns>Visible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profile__c</field>
            <operation>equals</operation>
            <value>VAR Partner Admin</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TN-{0000}</displayFormat>
        <label>Tab/Link Visibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tab/Link Visibility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>